# pi-top-4-Miniscreen

./: .gitignore  .gitmodules  .pre-commit-config.yaml  CONTRIBUTING.rst  Jenkinsfile  LICENSE.rst  MANIFEST.in  README.md  README.rst  README.rst.new  conftest.py  dev-start.py  noxfile.py  pyproject.toml  setup.cfg  setup.py
.github/workflows/: codeql.yml  deb-build.yml  deb-release.yml  deploy-release-on-publish.yml  tag-and-draft-release-on-changelog-pr-merge.yml  test-and-build-on-all-commits.yml  test-docker-image-build.yml  test.yml
debian/: changelog  control  copyright  pt-miniscreen.install  pt-miniscreen.lintian-overrides  pt-miniscreen.postinst  pt-miniscreen.service  pt-miniscreen.triggers  pt-sys-menu.install  pt-sys-menu.service  pt-sys-oled.install  pt-sys-oled.postinst  pt-sys-oled.preinst  pt-sys-oled.service  pt-sys-oled.triggers  py3dist-overrides  rules
debian/source/: lintian-overrides
dev/: README.md  run.py  sync-once.sh  sync.sh
docs/: more-info.rst
docs.new/: conf.py  index.rst  reference.rst  usage.rst
legacy_widgets/: clock.py  date_time.py  disk.py  memory.py  network.py  uptime.py
pt_miniscreen/: __init__.py  __main__.py  actions.py  activity_timer.py  app.py  bootsplash.py  button_press.py  button_press_manager.py  config.py  config_factory.py  event.py  hotspot_manager.py  menu.py  menu_base.py  menu_manager.py  menu_page_actions.py  miniscreen_app.py  page_manager.py  root.py  screensaver.py  scroll.py  sleep_manager.py  state.py  tile_group.py  tile_group_context.py  tile_manager.py  types.py  utils.py  version.py  viewport.py
pt_miniscreen/asteroids/: app.py
pt_miniscreen/components/: action_page.py  arrow_navigation_indicator.py  button_navigable_page_list.py  button_navigable_selectable_list.py  button_navigatable_page_list.py  button_navigatable_selectable_list.py  confirmation_page.py  cpu_bars.py  enterable_page_list.py  enterable_selectable_list.py  icon_text_row.py  info_page.py  menu_list.py  menu_page.py  mixins.py  progress_bar.py  right_gutter.py  scrollable.py  scrollable_text_file.py  wifi_strength.py
pt_miniscreen/config/: __init__.py  classes.py  config.py  factory.py  manager.py
pt_miniscreen/config/classes/: menu.py  menu_app.py  menu_edge_behaviour.py  page.py  title_bar.py
pt_miniscreen/core/: README.md  __init__.py  app.py  component.py  example.py  hotspot.py  hotspots.py  utils.py
pt_miniscreen/core/components/: __init__.py  arrow_navigation_indicator.py  image.py  list.py  marquee_text.py  page_list.py  (+4 more)
pt_miniscreen/generators/: __init__.py  scroll.py
pt_miniscreen/hotspots/: action_page.py  base.py  bootsplash.py  bootsplash_hotspot.py  clock.py  cpu_bars.py  cpu_bars_hotspot.py  date_time.py  disk.py  icon_text_row.py  image.py  image_hotspot.py  info_page.py  marquee_dynamic_text_hotspot.py  marquee_text.py  marquee_text_hotspot.py  memory.py  menu.py  menu_cover.py  menu_page.py  network.py  processing_icon_hotspot.py  progress_bar.py  rectangle_hotspot.py  right_gutter.py  scrollbar.py  starfield_screensaver_hotspot.py  status_icon_hotspot.py  table.py  table_page.py  text.py  text_hotspot.py  uptime.py  wifi_strength.py  wifi_strength_hotspot.py
pt_miniscreen/legacy/: event.py  menu_page.py  miniscreen_app.py  state.py  types.py
pt_miniscreen/menus/: __init__.py  base.py  hud.py  network.py  settings.py  settings_connection.py  settings_display.py  settings_root.py  system.py
pt_miniscreen/pages/: base.py  guide.py  menu.py
pt_miniscreen/tile_groups/: __init__.py  base.py  hud.py  screensaver.py  settings.py
pt_miniscreen/tiles/: __init__.py  base.py  bootsplash.py  hud.py  menu.py  right_gutter.py  screensaver.py  settings.py  settings_connection.py  settings_title_bar.py  title_bar.py  viewport.py
pt_miniscreen/welcome/: app.py  root.py  text_page.py
pt_miniscreen/widgets/: __init__.py
scripts/: pt-miniscreen-should-start
src/: pt-miniscreen  pt-sys-menu  pt-sys-oled  widget_viewer.py
src/components/: ButtonPress.py  Device.py  Menu.py  MenuManager.py  MenuPage.py  Page.py  PageManager.py  System.py  actions.py  menu.py  menu_manager.py  menu_stuff.py  page.py  pt_bluetooth_keyboard_manager.py
src/dev/: button-emulator  widget_viewer.py
src/hotspot/: batt_level.py  date_time.py  project_template.py  projects.py
src/images/: wifi_strength_bars
src/pt_miniscreen/: __main__.py  menu_page.py  menu_page_actions.py  miniscreen_app.py
src/scripts/: README.md  delAp.sh  dhcpcd.conf  dhcpd.conf  hostapd.conf  hostapd.service  pt-start-access-point.sh  pt-stop-access-point.sh  setAp.sh
src/widgets/: __init__.py  common.py
tests/: Dockerfile  README.md  __init__.py  app_test.py  core_app_test.py  core_arrow_navigation_indicator_component_test.py  core_component_test.py  core_image_component_test.py  core_list_component_test.py  core_marquee_text_component_test.py  core_page_list_component_test.py  core_selectable_list_component_test.py  core_smoke_test.py  core_stack_component_test.py  core_text_component_test.py  core_utils_test.py  fixtures_test.py  hud_test.py  network_test.py  overview_test.py  project_class_test.py  projects_test.py  requirements.txt  screensaver_test.py  settings_test.py  system_test.py  test_main.py  test_state.py  welcome_app_test.py
tests/mocks/: battery.py  miniscreen.py  pitop.py  ptdm.py  sys_info.py  utils.py
tests/plugins/: snapshot_reporter.py
tests/scripts/: run.sh
whl/: pitop-0.19.0-py3-none-any.whl
(+264 files in other folders)
