[tool.poetry]
name = "pt-miniscreen"
version = "0.0.0"
description = "pi-top [4] Miniscreen App"
authors = ["pi-top <os-dev@pi-top.com>"]
license = "Apache-2.0"
readme = "README.rst"
homepage = "https://github.com/pi-top/pi-top-4-Miniscreen-App"
repository = "https://github.com/pi-top/pi-top-4-Miniscreen-App"
documentation = "https://pt-miniscreen.readthedocs.io"
classifiers = [
    "Development Status :: 4 - Beta",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
]
# Include image assets
include = ["images"]

[tool.poetry.urls]
Changelog = "https://github.com/pi-top/pi-top-4-Miniscreen-App/releases"

[tool.poetry.dependencies]
# Development version without extra dependencies
pitop = { file = "./whl/pitop-0.19.0-py3-none-any.whl", extras = ["miniscreen"] }
pyzmq = { version = "22.1.0", source = "piwheels" }
numpy = { version = "1.16.6", source = "piwheels" }
matplotlib = { version = "3.0.3", source = "piwheels" }
Pillow = { version = "5.4.1", source = "piwheels" }
python = "^3.7.3"
click = "^8.0.1"

[[tool.poetry.source]]
name = "piwheels"
url = "https://www.piwheels.org/simple"

[tool.poetry.dev-dependencies]
pytest = "^6.2.4"
coverage = {extras = ["toml"], version = "^5.4"}
safety = "^1.10.3"
mypy = "^0.910"
typeguard = "^2.12.1"
xdoctest = {extras = ["colors"], version = "^0.15.5"}
sphinx = "^4.1.1"
sphinx-autobuild = "^2021.3.14"
pre-commit = "^2.13.0"
flake8 = "^3.9.2"
black = "^20.8b1"
flake8-bandit = "^2.1.2"
flake8-bugbear = "^21.4.3"
flake8-docstrings = "^1.6.0"
flake8-rst-docstrings = "^0.2.3"
pep8-naming = "^0.12.0"
darglint = "^1.8.0"
reorder-python-imports = "^2.5.0"
pre-commit-hooks = "^4.0.1"
sphinx-rtd-theme = "^0.5.2"
sphinx-click = "^3.0.1"
Pygments = "^2.9.0"

[tool.poetry.scripts]
pt-miniscreen = "pt_miniscreen.console:main"

[tool.coverage.paths]
source = ["src", "*/site-packages"]

[tool.coverage.run]
branch = true
source = ["pt_miniscreen"]

[tool.coverage.report]
show_missing = true
fail_under = 100

[tool.mypy]
strict = true
pretty = true
show_column_numbers = true
show_error_codes = true
show_error_context = true

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
