[metadata]
name = pt-miniscreen
version = 5.0.0
description = pi-top [4] Miniscreen App
long_description = file: README.rst
long_description_content_type = text/x-rst
author = pi-top (CEED Ltd)
author_email = os-dev@pi-top.com
url = https://github.com/pi-top/pi-top-4-Miniscreen-App
license = Apache-2.0
classifiers =
    Development Status :: 4 - Beta
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9

[options]
zip_safe = False
include_package_data = True
packages = find:
python_requires = >=3.7, <4
install_requires =
    click>=7.1.2,<7.2.0
    matplotlib>=3.3.4,<3.4.0
    monotonic>=1.5,<1.6
    numpy>=1.19.5,<1.20
    Pillow>=8.1.2,<8.2.0
    pitop>=0.19.0,<0.20.0
    psutil>=5.8.0,<5.9.0
    pyzmq>=20.0.0,<20.1.0

[options.package_data]
* = *.gif, *.png

[options.entry_points]
console_scripts =
    pt-miniscreen = pt_miniscreen.__main__:main

[bdist_wheel]
universal = 1
