[metadata]
name = pt-miniscreen
version = 5.0.0
description = pi-top [4] Miniscreen App
long_description = file: README.rst
long_description_content_type = text/x-rst
author = pi-top (CEED Ltd)
author_email = os-dev@pi-top.com
url = https://github.com/pi-top/pi-top-4-Miniscreen-App
license = Apache-2.0
classifiers =
    Development Status :: 4 - Beta
    Programming Language :: Python :: 3.9

[options]
zip_safe = False
include_package_data = True
packages = find:
python_requires = >=3.9, <4
install_requires =
    # Package will always update in-step with SDK
    # So avoid version-locking
    pitop
    click_logging
    click >= 7.1.2
    matplotlib >= 3.3.4
    monotonic >= 1.5
    numpy >= 1.19.5
    Pillow >= 8.1.2
    psutil >= 5.8.0
    pyzmq >= 20.0.0

[options.package_data]
* = *.gif, *.png

[options.entry_points]
console_scripts =
    pt-miniscreen = pt_miniscreen.__main__:main

[bdist_wheel]
universal = 1

[flake8]
per-file-ignores =
    __init__.py: F401
    test_*: E402
# https://black.readthedocs.io/en/stable/faq.html#why-are-flake8-s-e203-and-w503-violated
extend-ignore = E203
max-line-length = 150

[isort]
profile = black

[pep8]
max-line-length = 150

[tool:pytest]
addopts = -n auto
